# gupiao

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
configs/: README.md  morning_strategy_profiles.json
data/: README.md
docs/: AUTOMATION_RUNBOOK.md  DEVELOPMENT.md  PROJECT_MEMORY.md  PROJECT_PLAN.md  PROJECT_TASKS.md
docs/research/: 01_github_search_checklist.md  02_github_project_registry.md  03_skill_distillation_plan.md  04_p0_reference_notes.md
reports/: README.md
reports/summaries/: README.md  latest_auction_validation.md  smoke_market_scan.md
skills/auction-data-integration/: SKILL.md
skills/backtest-validation/: SKILL.md
skills/performance-risk-reporting/: SKILL.md
skills/stock-data-ingestion/: SKILL.md
skills/stock-screening-strategies/: SKILL.md
skills/stock-trading-research-master/: SKILL.md
skills/technical-signal-buy-sell/: SKILL.md
src/gupiao/: __init__.py  cli.py  compat.py  trade_plan.py
src/gupiao/auction/: __init__.py  features.py
tests/: test_akshare_provider.py  test_auction_features.py  test_auction_monitor.py  test_auction_validation.py  test_backtest_engine.py  test_candidate_selection.py  test_cli_workflows.py  test_data_quality.py  test_factors.py  test_indicators.py  test_local_auction_cache.py  test_local_daily_cache.py  test_market_cache_refresh.py  test_market_scan.py  test_morning_optimization.py  test_morning_workflow.py  test_package_import.py  test_reports.py  test_research_experiments.py  test_screening_strategy.py  test_signals.py  test_sqlite_storage.py  test_web_dashboard.py
(+33 files in other folders)
