[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gupiao"
version = "0.2.0"
description = "A-share stock screening and buy/sell signal research toolkit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "WCSY-YG" },
]
keywords = ["a-share", "quant", "stock-screening", "backtest"]
dependencies = []

[project.optional-dependencies]
data = [
  "akshare",
  "duckdb",
  "pandas",
  "pyarrow",
]
analysis = [
  "numpy",
  "pandas",
  "ta",
]
backtest = [
  "backtesting",
]
report = [
  "quantstats",
]
dev = [
  "mypy",
  "pytest",
  "ruff",
]

[project.scripts]
gupiao = "gupiao.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
packages = ["gupiao"]
strict = true
warn_unused_configs = true
